change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-cg-angular",
+  "name": "generator-tnr-angular",
   "version": "3.2.1",
   "description": "Yeoman Generator for Enterprise Angular projects.",
   "keywords": [
